--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,8 @@
     border-radius: 3px;
     overflow: hidden;
     margin-bottom: 10px;
+    display:flex;
+    flex-direction: column;
 
     &-picture {
       max-width: 100%;
@@ -39,6 +41,17 @@
         margin-left: -30px;
         animation: image-preloader-spin 2s infinite linear;
         box-sizing: border-box;
+      }
+    }
+
+    &-wrapper {    
+      display: inline;
+      padding: 40px;
+      border-radius: 4px;
+      transition: background-color ease 0.3s;
+
+      &:hover{
+        background-color: #f5f5f5;
       }
     }
   }
