--- a/src/index.css
+++ b/src/index.css
@@ -7,13 +7,13 @@
     border-radius: 3px;
     overflow: hidden;
     margin-bottom: 10px;
-    display:flex;
+    display: flex;
     flex-direction: column;
 
     &-picture {
       max-width: 100%;
       vertical-align: bottom;
-      display: block;
+      display: inline-block;
     }
 
     &-preloader {
@@ -44,15 +44,40 @@
       }
     }
 
-    &-wrapper {    
-      display: inline;
+    &-wrapper {
+      display: inline-block;
       padding: 40px;
       border-radius: 4px;
+      position: relative;
       transition: background-color ease 0.3s;
+      user-select: none;
+      flex-shrink: 0;
 
-      &:hover{
+      &:hover {
         background-color: #f5f5f5;
       }
+    }
+
+    &-leftbtn {
+      left: 10px;
+    }
+
+    &-rightbtn {
+      right: 10px;
+    }
+
+    &-leftbtn,
+    &-rightbtn {
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      width: 4px;
+      max-height: 96px;
+      min-height: 40px;
+      border-radius: 3px;
+      background: #BFBFBF;
+      cursor: ew-resize;
+
     }
   }
 
@@ -99,7 +124,7 @@
       margin: 0 6px 0 0;
     }
   }
-  
+
   &--filled {
     .cdx-button {
       display: none;
@@ -166,6 +191,7 @@
   0% {
     transform: rotate(0deg);
   }
+
   100% {
     transform: rotate(360deg);
   }
