--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@
       max-width: 100%;
       vertical-align: bottom;
       display: inline-block;
+      user-select: none;
     }
 
     &-preloader {
@@ -52,10 +53,7 @@
       transition: background-color ease 0.3s;
       user-select: none;
       flex-shrink: 0;
-
-      &:hover {
-        background-color: #f5f5f5;
-      }
+      background-color: #fafafa;
     }
 
     &-leftbtn {
