--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,7 @@
       vertical-align: bottom;
       display: inline-block;
       user-select: none;
+      -webkit-user-select: none;
     }
 
     &-preloader {
